tests/baselines/reference/asyncMethod21.errors.txt
tests/cases/conformance/async/downlevel/asyncMethod/asyncMethod21.ts(9,33): error TS1109: Expression expected.


==== tests/cases/conformance/async/downlevel/asyncMethod/asyncMethod21.ts (1 errors) ====
    declare class Promise<T> {
        constructor(init: (resolve: (value?: T | IPromise<T>) => void, reject: (reason?: any) => void) => void);
        then<TResult>(onfulfilled?: (value: T) => TResult | IPromise<TResult>, onrejected?: (reason: any) => TResult | IPromise<TResult>): Promise<TResult>;
    }
    
    var o = {
      async bar(): Promise<void> {
        // 'await' here is an identifier, and not a yield expression.
        async function foo(a = await): Promise<void> {
                                    ~
!!! error TS1109: Expression expected.
        }
      }
    }